// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page-layout Accordion layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="col col--4-mm col--12 "
      >
        <div
          data-swiftype-index="false"
        >
          <div
            className="sticky-outer-wrapper"
            style={Object {}}
          >
            <div
              className="sticky-inner-wrapper"
              style={
                Object {
                  "position": "relative",
                  "top": "0px",
                  "zIndex": 3,
                }
              }
            >
              <div
                className="viewport-full-mm scroll-auto-mm scroll-styled"
                id="dr-ui--page-layout-sidebar"
              >
                <div
                  className="py12 none block-mm"
                >
                  <div
                    className="ml18 my18"
                  >
                    <div
                      className="flex-parent"
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <a
                        className="flex-child txt-fancy txt-l txt-truncate color-blue-on-hover"
                        href="/dr-ui/"
                      >
                        Search SDK for Android
                      </a>
                      <span
                        className="flex-child flex-child--no-shrink mx6"
                      >
                        <div
                          className="inline-block"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                        >
                          <div
                            aria-describedby="tooltip-1"
                            className="txt-s txt-bold round px6 inline-block cursor-default border"
                            style={
                              Object {
                                "background": "#f1f3fd",
                                "borderColor": "#0428c8",
                                "color": "#0c248d",
                              }
                            }
                          >
                            Beta
                          </div>
                          <div
                            className="hide-visually"
                            id="tooltip-1"
                            role="tooltip"
                          >
                            <div
                              className="txt-s wmax120"
                            >
                              This feature is in public beta and is subject to changes.
                            </div>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full align-left round-l-full bg-blue-faint color-blue"
                      href="/PageLayout/"
                    >
                      Overview
                      <span
                        style={
                          Object {
                            "margin-left": "3px",
                          }
                        }
                      >
                        <svg
                          className="events-none icon inline-block align-t"
                          focusable="false"
                          role="presentation"
                          style={
                            Object {
                              "height": 18,
                              "width": 18,
                            }
                          }
                        >
                          <use
                            xlinkHref="#icon-chevron-down"
                            xmlnsXlink="http://www.w3.org/1999/xlink"
                          />
                        </svg>
                      </span>
                    </a>
                    <ul>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/layouts/"
                        >
                          Layouts
                        </a>
                      </li>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/navigation/"
                        >
                          Navigation
                        </a>
                      </li>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/images/"
                        >
                          Images and videos
                        </a>
                      </li>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/constants/"
                        >
                          Constants
                        </a>
                      </li>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/frontmatter/"
                        >
                          Frontmatter
                        </a>
                      </li>
                    </ul>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/specification/"
                    >
                      Specification
                    </a>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/examples/"
                    >
                      Examples
                    </a>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/demo/"
                    >
                      Demo
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col col--12 col--8-mm"
      >
        <div
          className="pr0-mm mt24 mb60 px24-mm"
          id="docs-content"
        >
          <div
            className="prose"
          >
            <h1
              className="txt-fancy"
            >
              Overview
            </h1>
            <div
              className="mt36"
            >
              <div
                className="bg-gray-faint py12 px18 round color-gray"
              >
                <div>
                  <div>
                    <div
                      className="mb6"
                    >
                      Was this 
                      page
                       helpful?
                    </div>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout Example (index) layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="col col--4-mm col--12 undefined"
      >
        <div
          data-swiftype-index="false"
        >
          <div
            className="sticky-outer-wrapper"
            style={Object {}}
          >
            <div
              className="sticky-inner-wrapper"
              style={
                Object {
                  "position": "relative",
                  "top": "0px",
                  "zIndex": 3,
                }
              }
            >
              <div
                className="viewport-full-mm scroll-auto-mm scroll-styled"
                id="dr-ui--page-layout-sidebar"
              >
                <div
                  className="py12 none block-mm"
                >
                  <div
                    className="ml18 my18"
                  >
                    <div
                      className="flex-parent"
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <a
                        className="flex-child txt-fancy txt-l txt-truncate color-blue-on-hover"
                        href="/dr-ui/"
                      >
                        dr-ui
                      </a>
                    </div>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full align-left round-l-full bg-blue-faint color-blue"
                      href="/PageLayout/"
                    >
                      Overview
                      <span
                        style={
                          Object {
                            "margin-left": "3px",
                          }
                        }
                      >
                        <svg
                          className="events-none icon inline-block align-t"
                          focusable="false"
                          role="presentation"
                          style={
                            Object {
                              "height": 18,
                              "width": 18,
                            }
                          }
                        >
                          <use
                            xlinkHref="#icon-chevron-down"
                            xmlnsXlink="http://www.w3.org/1999/xlink"
                          />
                        </svg>
                      </span>
                    </a>
                    <ul>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/specifications/"
                        >
                          Specifications
                        </a>
                      </li>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/examples/"
                        >
                          Examples
                        </a>
                      </li>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/demo/"
                        >
                          Demo
                        </a>
                      </li>
                    </ul>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/specification/"
                    >
                      Specification
                    </a>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/examples/"
                    >
                      Examples
                    </a>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/demo/"
                    >
                      Demo
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col col--12 col--8-mm"
      >
        <div
          className="pr0-mm mt24 mb60 px24-mm"
          id="docs-content"
        >
          <div
            className="prose"
          >
            <h1
              className="txt-fancy"
            >
              Examples
            </h1>
            
          </div>
          <div>
            <div>
              <div>
                <a
                  className="unprose mb18 block color-blue-on-hover"
                  href="/PageLayout/#cool"
                >
                  <h2
                    className="txt-bold"
                    id="cool"
                  >
                    Cool
                     
                    <span
                      data-swiftype-index="false"
                    >
                      (
                      3
                      )
                    </span>
                  </h2>
                </a>
                <div
                  className="grid grid--gut36"
                >
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-1/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Example 1
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Replace me.
                        </div>
                      </div>
                    </a>
                  </div>
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-2/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Example 2
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Replace me.
                        </div>
                      </div>
                    </a>
                  </div>
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-3/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Example 3
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Replace me.
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div>
                <a
                  className="unprose mb18 block color-blue-on-hover"
                  href="/PageLayout/#awesome"
                >
                  <h2
                    className="txt-bold"
                    id="awesome"
                  >
                    Awesome
                     
                    <span
                      data-swiftype-index="false"
                    >
                      (
                      1
                      )
                    </span>
                  </h2>
                </a>
                <div
                  className="grid grid--gut36"
                >
                  <div
                    className="mb18 col col--12 col--6-ml"
                  >
                    <a
                      className="color-gray-dark transition color-blue-on-hover round clip inline-block w-full unprose pb18"
                      href="/PageLayout/example-3/"
                    >
                      <div
                        className="relative h120 mb6"
                      >
                        <div
                          className="absolute top bottom w-full h-full round"
                          style={
                            Object {
                              "backgroundImage": "url(/files/ios-horizontal.png)",
                              "backgroundPosition": "center",
                              "backgroundRepeat": "no-repeat",
                              "backgroundSize": "cover",
                            }
                          }
                        />
                      </div>
                      <div>
                        <div
                          className="mb6"
                        >
                          
                          <div
                            className="inline-block color-gray txt-s txt-bold"
                          >
                            <svg
                              className="events-none icon inline-block align-t"
                              focusable="false"
                              role="presentation"
                              style={
                                Object {
                                  "height": 18,
                                  "width": 18,
                                }
                              }
                            >
                              <use
                                xlinkHref="#icon-code"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              />
                            </svg>
                             
                            JavaScript
                          </div>
                        </div>
                        <div
                          className="mb6"
                        >
                          Example 3
                        </div>
                        <div
                          className="color-gray color-gray-on-hover"
                        >
                          Replace me.
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout Example page layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="col col--4-mm col--12 undefined"
      >
        <div
          data-swiftype-index="false"
        >
          <div
            className="sticky-outer-wrapper"
            style={Object {}}
          >
            <div
              className="sticky-inner-wrapper"
              style={
                Object {
                  "position": "relative",
                  "top": "0px",
                  "zIndex": 3,
                }
              }
            >
              <div
                className="viewport-full-mm scroll-auto-mm scroll-styled"
                id="dr-ui--page-layout-sidebar"
              >
                <div
                  className="py12 none block-mm"
                >
                  <div
                    className="ml18 my18"
                  >
                    <div
                      className="flex-parent"
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <a
                        className="flex-child txt-fancy txt-l txt-truncate color-blue-on-hover"
                        href="/dr-ui/"
                      >
                        dr-ui
                      </a>
                    </div>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full align-left round-l-full bg-blue-faint color-blue"
                      href="/PageLayout/"
                    >
                      Overview
                      <span
                        style={
                          Object {
                            "margin-left": "3px",
                          }
                        }
                      >
                        <svg
                          className="events-none icon inline-block align-t"
                          focusable="false"
                          role="presentation"
                          style={
                            Object {
                              "height": 18,
                              "width": 18,
                            }
                          }
                        >
                          <use
                            xlinkHref="#icon-chevron-down"
                            xmlnsXlink="http://www.w3.org/1999/xlink"
                          />
                        </svg>
                      </span>
                    </a>
                    <ul>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/specifications/"
                        >
                          Specifications
                        </a>
                      </li>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/examples/"
                        >
                          Examples
                        </a>
                      </li>
                      <li
                        className="py6 pl30 align-left round-full color-gray"
                      >
                        <a
                          className="inline-block w-full"
                          href="/PageLayout/demo/"
                        >
                          Demo
                        </a>
                      </li>
                    </ul>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/specification/"
                    >
                      Specification
                    </a>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/examples/"
                    >
                      Examples
                    </a>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/demo/"
                    >
                      Demo
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col col--12 col--8-mm"
      >
        <div
          className="pr0-mm mt24 mb60 px24-mm"
          id="docs-content"
        >
          <div
            className="prose"
          >
            <h1
              className="txt-fancy"
            >
              Examples
            </h1>
            <div
              className="mt36"
            >
              <div
                className="bg-gray-faint py12 px18 round color-gray"
              >
                <div>
                  <div>
                    <div
                      className="mb6"
                    >
                      Was this 
                      example
                       helpful?
                    </div>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout Page layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="col col--4-mm col--12 "
      >
        <div
          data-swiftype-index="false"
        >
          <div
            className="sticky-outer-wrapper"
            style={Object {}}
          >
            <div
              className="sticky-inner-wrapper"
              style={
                Object {
                  "position": "relative",
                  "top": "0px",
                  "zIndex": 3,
                }
              }
            >
              <div
                className="viewport-full-mm scroll-auto-mm scroll-styled"
                id="dr-ui--page-layout-sidebar"
              >
                <div
                  className="py12 none block-mm"
                >
                  <div
                    className="ml18 my18"
                  >
                    <div
                      className="flex-parent"
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <a
                        className="flex-child txt-fancy txt-l txt-truncate color-blue-on-hover"
                        href="/dr-ui/"
                      >
                        dr-ui
                      </a>
                    </div>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/"
                    >
                      Overview
                      <span
                        style={
                          Object {
                            "margin-left": "3px",
                          }
                        }
                      >
                        <svg
                          className="events-none icon inline-block align-t"
                          focusable="false"
                          role="presentation"
                          style={
                            Object {
                              "height": 18,
                              "width": 18,
                            }
                          }
                        >
                          <use
                            xlinkHref="#icon-chevron-right"
                            xmlnsXlink="http://www.w3.org/1999/xlink"
                          />
                        </svg>
                      </span>
                    </a>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/specification/"
                    >
                      Specification
                    </a>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/examples/"
                    >
                      Examples
                    </a>
                  </div>
                  <div
                    className="pt6"
                  >
                    <a
                      className="txt-spacing1 px18 py6 inline-block txt-m color-gray-dark txt-uppercase txt-bold w-full color-darken50"
                      href="/PageLayout/demo/"
                    >
                      Demo
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col col--12 col--8-mm"
      >
        <div
          className="pr0-mm mt24 mb60 px24-mm"
          id="docs-content"
        >
          <div
            className="prose"
          >
            <h1
              className="txt-fancy"
            >
              Overview
            </h1>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <h2
              id="section-1"
            >
              Section 1
            </h2>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <h2
              id="section-2"
            >
              Section 2
            </h2>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <div
              className="mt36"
            >
              <div
                className="bg-gray-faint py12 px18 round color-gray"
              >
                <div>
                  <div>
                    <div
                      className="mb6"
                    >
                      Was this 
                      page
                       helpful?
                    </div>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout Set hideSearch to remove Search component renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="dr-ui--note py18 px18 round flex-parent flex-parent--row mb18"
        style={
          Object {
            "background": "#fbe5e5",
            "color": "#9b3134",
          }
        }
      >
        <div
          className="flex-child mr18 none block-mm pt3"
        >
          <div
            className="bg-red-light round-full color-red flex-parent flex-parent--center-main flex-parent--center-cross"
            style={
              Object {
                "height": 50,
                "width": 50,
              }
            }
          >
            <svg
              className="events-none icon"
              focusable="false"
              role="presentation"
              style={
                Object {
                  "height": 40,
                  "width": 40,
                }
              }
            >
              <use
                xlinkHref="#icon-alert"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </div>
        <div
          className="flex-child prose"
        >
          <div
            className="txt-bold txt-m mb6"
          >
            Something went wrong
          </div>
          <p>
            We sent the error to the team. Please refresh the page to try again.
          </p>
          <details>
            <summary
              className="cursor-pointer"
            >
              Error details
            </summary>
            <pre>
              <code>
                Cannot read property '/PageLayout/' of undefined
              </code>
            </pre>
          </details>
        </div>
      </div>
      <div
        className="col col--12 col--8-mm"
      >
        <div
          className="pr0-mm mt24 mb60 px24-mm"
          id="docs-content"
        >
          <div
            className="prose"
          >
            <h1
              className="txt-fancy"
            >
              Overview
            </h1>
            <div
              className="mt36"
            >
              <div
                className="bg-gray-faint py12 px18 round color-gray"
              >
                <div>
                  <div>
                    <div
                      className="mb6"
                    >
                      Was this 
                      page
                       helpful?
                    </div>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`page-layout full layout renders as expected 1`] = `
Array [
  <div
    className="shell-header-buffer"
  />,
  <div
    className="limiter"
  >
    <div
      className="grid"
    >
      <div
        className="col col--12"
      >
        <div
          className="pr0-mm mt24 px24-mm"
          id="docs-content"
        >
          <div
            className="prose"
          >
            <h1
              className="txt-fancy"
            >
              Overview
            </h1>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <h2
              id="section-1"
            >
              Section 1
            </h2>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <h2
              id="section-2"
            >
              Section 2
            </h2>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <div
              className="mt36"
            >
              <div
                className="bg-gray-faint py12 px18 round color-gray"
              >
                <div>
                  <div>
                    <div
                      className="mb6"
                    >
                      Was this 
                      page
                       helpful?
                    </div>
                    <button
                      className="btn btn--s"
                      id="dr-ui--feedback-page-yes"
                      onClick={[Function]}
                    >
                      Yes
                    </button>
                    <button
                      className="btn btn--s ml6"
                      id="dr-ui--feedback-page-no"
                      onClick={[Function]}
                    >
                      No
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>,
  <div
    className="fixed block none-mm mx24 my24 z5 bottom right"
  >
    <div
      className="block mx24 my24 z5"
    >
      <div
        className="inline-block"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-label="Back to top"
          className="btn--blue w60 h60 px0 round-full shadow-darken25 color-white flex-parent flex-parent--center-main flex-parent--center-cross"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="events-none icon"
            focusable="false"
            role="presentation"
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          >
            <use
              xlinkHref="#icon-arrow-up"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
]
`;
